@@ -5,7 +5,9 @@ import com.connecteamed.server.domain.contribution.enums.ContributionAction;
 import com.connecteamed.server.domain.contribution.service.ContributionService;
 import com.connecteamed.server.domain.member.entity.Member;
 import com.connecteamed.server.domain.member.repository.MemberRepository;
+import com.connecteamed.server.domain.notification.enums.NotificationCategory;
 import com.connecteamed.server.domain.notification.service.NotificationCommandService;
+import com.connecteamed.server.domain.notification.service.NotificationHelper;
 import com.connecteamed.server.domain.task.dto.CompletedTaskDetailRes;
 import com.connecteamed.server.domain.task.dto.CompletedTaskUpdateReq;
 import com.connecteamed.server.domain.task.entity.Task;
@@ -59,11 +61,11 @@ class CompletedTaskServiceTest {
     private ContributionService contributionService;
 
     @Mock
-    private NotificationCommandService notificationCommandService;
+    private NotificationHelper notificationHelper;
 
     @Test
-    @DisplayName("완료 업무 상태 변경 시 COMPLETED_TASK_UPDATE 잔디를 기록한다")
-    void updateCompletedTaskStatus_Success_RecordContribution() {
+    @DisplayName("완료 업무 상태 변경 시 잔디 기록 및 재시작 알림 발송 검증")
+    void updateCompletedTaskStatus_Success() {
         try (MockedStatic<SecurityUtil> mockedSecurityUtil = mockStatic(SecurityUtil.class)) {
             // given
             Long taskId = 1L;
@@ -80,14 +82,17 @@ class CompletedTaskServiceTest {
 
             // when
             completedTaskService.updateCompletedTaskStatus(taskId, TaskStatus.IN_PROGRESS);
-
             // then
+            // 잔디 기록 검증
             verify(contributionService).recordContribution(eq(memberId), any());
+            // 알림 발송 검증
+            verify(notificationHelper, times(1)).sendToOthers(eq(task), eq(NotificationCategory.TASK_RESTARTED));
         }
     }
+
     @Test
-    @DisplayName("완료 업무 상세 수정 시 COMPLETED_TASK_UPDATE 잔디를 기록한다")
-    void updateCompletedTask_Success_RecordContribution() {
+    @DisplayName("완료 업무 상세 수정 시 잔디 기록 및 수정 알림 발송 검증")
+    void updateCompletedTask_Success() {
         try (MockedStatic<SecurityUtil> mockedSecurityUtil = mockStatic(SecurityUtil.class)) {
             // given
             Long taskId = 1L;
@@ -97,18 +102,18 @@ class CompletedTaskServiceTest {
             Task task = Task.builder().id(taskId).build();
             Member member = mock(Member.class);
             given(member.getId()).willReturn(memberId);
-            given(member.getLoginId()).willReturn(loginId);
 
-            TaskAssignee assignee = mock(TaskAssignee.class, RETURNS_DEEP_STUBS);
+            TaskAssignee myAssignee = mock(TaskAssignee.class, RETURNS_DEEP_STUBS);
+            given(myAssignee.getProjectMember().getMember().getId()).willReturn(memberId);
+
             TaskNote note = mock(TaskNote.class);
 
             mockedSecurityUtil.when(SecurityUtil::getCurrentLoginId).thenReturn(loginId);
             given(memberRepository.findByLoginId(loginId)).willReturn(Optional.of(member));
             given(taskRepository.findById(taskId)).willReturn(Optional.of(task));
 
-            given(taskAssigneeRepository.findAllByTaskId(taskId)).willReturn(List.of(assignee));
-            given(assignee.getProjectMember().getMember().getId()).willReturn(memberId);
-            given(assignee.getProjectMember().getMember().getLoginId()).willReturn(loginId);
+            // 담당자 확인 로직 모킹
+            given(taskAssigneeRepository.findAllByTaskId(taskId)).willReturn(Collections.singletonList(myAssignee));
 
             given(taskNoteRepository.findByTaskIdAndTaskAssignee_ProjectMember_Id(taskId, memberId))
                     .willReturn(Optional.of(note));
@@ -117,9 +122,10 @@ class CompletedTaskServiceTest {
             completedTaskService.updateCompletedTask(taskId, new CompletedTaskUpdateReq("제목", "내용", "수정노트"));
 
             // then
-            verify(contributionService).recordContribution(eq(memberId), argThat(c ->
-                    c.actionType() == ContributionAction.COMPLETED_TASK_UPDATE && c.targetId().equals(taskId)
-            ));
+            // 잔디 기록 검증
+            verify(contributionService).recordContribution(eq(memberId), any());
+            // 알림 발송 검증
+            verify(notificationHelper, times(1)).sendToOthers(eq(task), eq(NotificationCategory.TASK_MODIFIED));
         }
     }
 
